# processadora-pedidos

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.specify/: feature.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
docs/: 01-dominio-e-contratos.md
infra/: README.md  docker-compose.yml
infra/bootstrap/: main.py  pyproject.toml  seed_file.py
infra/bootstrap/resources/: aws_clients.py  bucket.py  orders_table.py  processed_messages_table.py  queues.py
infra/bootstrap/tests/: conftest.py  test_bucket_notification.py  test_idempotency.py  test_orders_table.py  test_processed_messages_table.py  test_queues.py
services/api-gateway/: README.md  pyproject.toml
services/api-gateway/src/api_gateway/: config.py  deps.py  main.py  publish.py  schemas.py
services/api-gateway/src/api_gateway/adapters/: orders_repository.py
services/api-gateway/src/api_gateway/domain/: elegibilidade_transicao.py  validar_payload.py
services/api-gateway/src/api_gateway/handlers/: cancelar_pedido.py  consultar_pedido.py  editar_pedido.py  listar_pedidos.py  solicitar_pedido.py
services/api-gateway/tests/: conftest.py  test_cancelar_pedido.py  test_consultar_pedido.py  test_editar_pedido.py  test_elegibilidade_transicao.py  test_health.py  test_listar_pedidos.py  test_solicitar_pedido.py  test_validar_payload.py
services/file-consumer/: README.md  pyproject.toml
services/file-consumer/src/file_consumer/: config.py  main.py
services/file-consumer/src/file_consumer/adapters/: notificacoes_s3.py  worker_loop.py
services/file-consumer/src/file_consumer/domain/: mensagens.py
services/file-consumer/src/file_consumer/handlers/: processar_notificacao.py
services/file-consumer/tests/: conftest.py  test_health.py  test_idempotencia.py  test_mensagens.py  test_notificacoes_s3.py  test_processar_notificacao.py  test_worker_loop.py
services/lambda-line-processor/: README.md  pyproject.toml
services/lambda-line-processor/src/lambda_line_processor/: config.py  main.py
services/lambda-line-processor/src/lambda_line_processor/adapters/: api_gateway_client.py  worker_loop.py
services/lambda-line-processor/src/lambda_line_processor/domain/: chamada_api.py
services/lambda-line-processor/src/lambda_line_processor/handlers/: processar_linha.py
services/lambda-line-processor/tests/: conftest.py  test_api_gateway_client.py  test_chamada_api.py  test_health.py  test_idempotencia.py  test_processar_linha.py  test_worker_loop.py
services/order-processor/: README.md  pyproject.toml
services/order-processor/src/order_processor/: config.py  main.py
services/order-processor/src/order_processor/adapters/: orders_repository.py  worker_loop.py
services/order-processor/src/order_processor/domain/: mensagens.py  transicoes.py
services/order-processor/src/order_processor/handlers/: cancelar_pedido.py  editar_pedido.py  pdf_response.py  solicitar_pedido.py  validar_pedido_response.py
services/order-processor/tests/: conftest.py  test_cancelar_pedido.py  test_editar_pedido.py  test_health.py  test_idempotencia.py  test_orders_repository.py  test_pdf_response.py  test_solicitar_pedido.py  test_transicoes.py  test_validar_pedido_response.py  test_worker_loop.py
services/order-validator/: README.md  pyproject.toml
services/order-validator/src/order_validator/: __init__.py  config.py  main.py
services/order-validator/src/order_validator/adapters/: __init__.py  catalogo_produtos.py  worker_loop.py
services/order-validator/src/order_validator/domain/: __init__.py  calculo.py  documento.py  estoque.py  limite_total.py  mensagens.py  modelos.py  quantidade_minima.py
services/order-validator/src/order_validator/handlers/: __init__.py  validar_pedido.py
services/order-validator/tests/: conftest.py  test_calculo.py  test_catalogo_produtos.py  test_documento.py  test_estoque.py  test_health.py  test_idempotencia.py  test_limite_total.py  test_quantidade_minima.py  test_validar_pedido.py  test_worker_loop.py
services/pdf-generator/: README.md  pyproject.toml
services/pdf-generator/src/pdf_generator/: config.py  main.py
services/pdf-generator/src/pdf_generator/adapters/: armazenamento.py  worker_loop.py
services/pdf-generator/src/pdf_generator/domain/: chave_s3.py  mensagens.py  renderizador.py  validacao.py
services/pdf-generator/src/pdf_generator/handlers/: gerar_pdf.py
services/pdf-generator/tests/: conftest.py  test_armazenamento.py  test_chave_s3.py  test_gerar_pdf.py  test_health.py  test_idempotencia.py  test_renderizador.py  test_validacao.py  test_worker_loop.py
shared/pedidos_shared/: README.md  pyproject.toml
shared/pedidos_shared/src/pedidos_shared/: __init__.py  file_layout.py  idempotency.py  logging.py  masking.py  models.py  settings.py  status.py
shared/pedidos_shared/src/pedidos_shared/clients/: dynamodb.py  s3.py  sqs.py
shared/pedidos_shared/tests/: test_file_layout.py  test_idempotency.py  test_logging.py  test_masking.py  test_models.py  test_s3.py  test_settings.py  test_status.py
shared/pedidos_shared/tests/clients/: test_sqs.py
shared/pedidos_shared/tests/fixtures/: exemplo.txt
specs/001-fundacao-compartilhada/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-infraestrutura-local/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-api-gateway/: plan.md  (+5 more)
(+61 files in other folders)
