[project]
name = "infra-bootstrap"
version = "0.1.0"
description = "Bootstrap idempotente dos recursos AWS (filas, tabelas, bucket) contra o Ministack local"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["resources"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
