[project]
name = "lambda-line-processor"
version = "0.1.0"
description = "Worker que consome pedido_lines_queue e chama o API Gateway pra cada linha do arquivo batch"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pedidos-shared",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.uv.sources]
pedidos-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lambda_line_processor"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
