[project]
name = "order-validator"
version = "0.1.0"
description = "Worker de validacao de pedidos: consome validar_pedido_queue e publica validar_pedido_response_queue"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pedidos-shared",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.uv.sources]
pedidos-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/order_validator"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
