[project]
name = "pdf-generator"
version = "0.1.0"
description = "Worker de emissao de nota fiscal: consome pdf_request_queue e publica pdf_response_queue"
requires-python = ">=3.12"
dependencies = [
    "reportlab>=4.0",
    "pedidos-shared",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.uv.sources]
pedidos-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_generator"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
